--- a/portfolio3.html
+++ b/portfolio3.html
@@ -13,9 +13,9 @@
 <h1>Kelly Zhang</h1> 
 
 <ul>
-  <li><a href="file:///F:/IntermediatePortfolioWebsite/portfolio.html">Year 1</a></li>
-  <li><a href="file:///F:/IntermediatePortfolioWebsite/portfolio2.html">Year 2</a></li>
-  <li><a href="file:///F:/IntermediatePortfolioWebsite/portfolio3.html">Year 3</a></li>
+  <li><a href="portfolio.html">Year 1</a></li>
+  <li><a href="portfolio2.html">Year 2</a></li>
+  <li><a href="portfolio3.html">Year 3</a></li>
 </ul>
 
 	<a href="P3_ATK380_UIUX.html"><div class="thumbnail">
