--- a/P1_ART284.html
+++ b/P1_ART284.html
@@ -12,4 +12,4 @@
 <p style="margin: 40px 200px 25px 200px">Really challenging piece to make. Used a printer and printed directly from Illustrator. Printed on acrylic glass. Each layer is printed and cut through with a laser. Some layers are from construction paper and the glass is colored with marker. Nail is screwed on bottom to keep piece together.</p>
 
 
-<p style="width:100%;text-align:center"><a href="../IntermediatePortfolioWebsite/portfolio.html">Back To Portfolio</a></p></div></body></html> 
+<p style="width:100%;text-align:center"><a href="portfolio.html">Back To Portfolio</a></p></div></body></html> 
