--- a/P1_ATK201.html
+++ b/P1_ATK201.html
@@ -27,4 +27,4 @@
 
 <p style="margin: 40px 200px 25px 400px">Explain your work of art. For example, what did you make it with? Photoshop, colored pencils, etc.? What were the assignment parameters? Why did you make it the way you did?</p>
 
-<p style="width:100%;text-align:center"><a href="../IntermediatePortfolioWebsite/portfolio.html">Back To Portfolio</a></p></div></body></html>
+<p style="width:100%;text-align:center"><a href="portfolio.html">Back To Portfolio</a></p></div></body></html>
