--- a/P2_ATK380_DP.html
+++ b/P2_ATK380_DP.html
@@ -15,4 +15,4 @@
 
 <p style="margin: 40px 200px 25px 200px">Made on Photoshop and Wacom drawing tablet. Used references to trace but used my drawing style and colors. Drawing based off of the song Holding On To You by twenty one pilots.</p>
 
-<p style="width:100%;text-align:center"><a href="../IntermediatePortfolioWebsite/portfolio2.html">Back To Portfolio</a></p></div></body></html>
+<p style="width:100%;text-align:center"><a href="portfolio2.html">Back To Portfolio</a></p></div></body></html>
