--- a/P3_ART226.html
+++ b/P3_ART226.html
@@ -13,4 +13,4 @@
 
 
 
-<p style="width:100%;text-align:center"><a href="../IntermediatePortfolioWebsite/portfolio3.html">Back To Portfolio</a></p></div></body></html>
+<p style="width:100%;text-align:center"><a href="portfolio3.html">Back To Portfolio</a></p></div></body></html>
