--- a/P3_ART227.html
+++ b/P3_ART227.html
@@ -15,4 +15,4 @@
 
 <p style="margin: 40px 200px 25px 200px">Experience Poster</p>
 
-<p style="width:100%;text-align:center"><a href="../IntermediatePortfolioWebsite/portfolio3.html">Back To Portfolio</a></p></div></body></html>
+<p style="width:100%;text-align:center"><a href="portfolio3.html">Back To Portfolio</a></p></div></body></html>
