--- a/P3_ATK302.html
+++ b/P3_ATK302.html
@@ -25,7 +25,7 @@
 
 
 
-<p style="width:100%;text-align:center"><a href="../IntermediatePortfolioWebsite/portfolio3.html">Back To Portfolio</a></p>
+<p style="width:100%;text-align:center"><a href="portfolio3.html">Back To Portfolio</a></p>
 
 </div></body>
 
