--- a/P3_ATK380_MG.html
+++ b/P3_ATK380_MG.html
@@ -16,4 +16,4 @@
 </ul>
 
 
-<p style="width:100%;text-align:center"><a href="../IntermediatePortfolioWebsite/portfolio3.html">Back To Portfolio</a></p></div></body></html>
+<p style="width:100%;text-align:center"><a href="portfolio3.html">Back To Portfolio</a></p></div></body></html>
