--- a/P3_ATK380_UIUX.html
+++ b/P3_ATK380_UIUX.html
@@ -16,4 +16,4 @@
 <p style="margin: 40px 200px 25px 200px">I started with making a persona. Then I have to come up with a device and app with UI/UX that would help out the person described in the persona. Made on Xtensio.</p>
 
 
-<p style="width:100%;text-align:center"><a href="../IntermediatePortfolioWebsite/portfolio3.html">Back To Portfolio</a></p></div></body></html>  
+<p style="width:100%;text-align:center"><a href="portfolio3.html">Back To Portfolio</a></p></div></body></html>  
