--- a/P1_ATK201.html
+++ b/P1_ATK201.html
@@ -7,11 +7,11 @@
 
 <h1>Daily Habits</h1>
 
-<img src="../IntermediatePortfolioWebsite/images/ride.jpg" alt="Work Name" />
+<img src="images/ride.jpg" alt="Work Name" />
 
 <p style="margin: 40px 200px 25px 200px">I made up a daily habit to follow for a week. Decided to make drawings of my interpretation of songs of an album. This is for the song "Ride" by twenty one pilots from the album Blurryface.</p>
 
-<img style="margin: 40px 200px 25px -100px" src="../IntermediatePortfolioWebsite/images/wdbwotv.jpg" alt="Work Name" />
+<img style="margin: 40px 200px 25px -100px" src="images/wdbwotv.jpg" alt="Work Name" />
 
 <p style="margin: 40px 200px 25px 200px">I made up a daily habit to follow for a week. Decided to make drawings of my interpretation of songs of an album. This is for the song "We Don't Believe What's on T.V." by twenty one pilots from the album Blurryface.</p>
 
