--- a/P1_ATK201.html
+++ b/P1_ATK201.html
@@ -25,6 +25,6 @@
 
 <img style="margin: 40px 200px 25px -5px" src="images/nottoday.jpg" alt="Work Name" />
 
-<p style="margin: 40px 200px 25px 400px">Explain your work of art. For example, what did you make it with? Photoshop, colored pencils, etc.? What were the assignment parameters? Why did you make it the way you did?</p>
+<p style="margin: 40px 200px 25px 200px">I made up a daily habit to follow for a week. Decided to make drawings of my interpretation of songs of an album. This is for the song "Not Today" by twenty one pilots from the album Blurryface.</p>
 
 <p style="width:100%;text-align:center"><a href="portfolio.html">Back To Portfolio</a></p></div></body></html>
