--- a/P2_ATK380_DP.html
+++ b/P2_ATK380_DP.html
@@ -7,11 +7,11 @@
 
 <h1>Testing Creativity with Adobe Photoshop (Digital Art)</h1>
 
-<img class="resize" style="margin: 40px 200px 25px 200px" src="../IntermediatePortfolioWebsite/images/Moonlady.jpg" alt="Work Name" />
+<img class="resize" style="margin: 40px 200px 25px 200px" src="images/Moonlady.jpg" alt="Work Name" />
 
 <p style="margin: 40px 200px 25px 200px">Made on Photoshop and Wacom drawing tablet. Used references to trace but used my drawing style and colors. Character is based on Avatar the Last Airbender.</p>
 
-<img class="resize" style="margin: 40px 200px 25px 200px" src="../IntermediatePortfolioWebsite/images/holdingontoyou.jpg" alt="Work Name" />
+<img class="resize" style="margin: 40px 200px 25px 200px" src="images/holdingontoyou.jpg" alt="Work Name" />
 
 <p style="margin: 40px 200px 25px 200px">Made on Photoshop and Wacom drawing tablet. Used references to trace but used my drawing style and colors. Drawing based off of the song Holding On To You by twenty one pilots.</p>
 
