--- a/P3_ATK380_UIUX.html
+++ b/P3_ATK380_UIUX.html
@@ -5,15 +5,12 @@
       
 </head><body><div id="wrapper">
 
-<h1>App and Device</h1>
+<h1>Life-sized Tape Dispenser</h1>
 
-<iframe width="100%" height="100%" src="https://app.xtensio.com/folio/m6h1kgdr"></iframe>
 
-<li><a href="https://app.xtensio.com/folio/m6h1kgdr">See full presentation here.</a></li>
+<img style="margin: 40px 200px 25px -235px" src="images/tapedispenser.jpg" alt="Work Name" />
 
-<img style="margin: 40px 200px 25px -235px" src="images/Folio.png" alt="Work Name" />
-
-<p style="margin: 40px 200px 25px 200px">I started with making a persona. Then I have to come up with a device and app with UI/UX that would help out the person described in the persona. Made on Xtensio.</p>
+<p style="margin: 40px 200px 25px 200px">Used a ton of box board paper, used critical thinking on making each piece. Used sand paper to make the right curves. Finally used paint to get the colors and glued it together with gorilla glue.</p>
 
 
 <p style="width:100%;text-align:center"><a href="portfolio3.html">Back To Portfolio</a></p></div></body></html>  
