--- a/P1_ART109.html
+++ b/P1_ART109.html
@@ -5,13 +5,11 @@
       
 </head><body><div id="wrapper">
 
-<h1>App and Device</h1>
+<h1>Life-sized Tape Dispenser</h1>
 
-<iframe width="100%" height="100%" src="https://app.xtensio.com/folio/m6h1kgdr"></iframe>
+<img style="margin: 40px 200px 25px -235px" src="images/tapedispenser.jpg" alt="Work Name" />
 
-<img style="margin: 40px 200px 25px -235px" src="images/Folio.png" alt="Work Name" />
-
-<p style="margin: 40px 200px 25px 200px">m</p>
+<p style="margin: 40px 200px 25px 200px">Used a big piece of box board to draw and make measurements to make each piece. Required a lot of critical thinking so the bigger scale of the hand crafted tape dispenser is equal to the actual tape dispenser. After making each piece, I used sand paper to sand down the edges to make them curvy. painted each piece with the closest color to the actual tape dispenser. and finally used gorilla glue to glue the pieces together.  </p>
 
 
 <p style="width:100%;text-align:center"><a href="portfolio.html">Back To Portfolio</a></p></div></body></html>  
