--- a/P1_ART109.html
+++ b/P1_ART109.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML><html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><link href="../IntermediatePortfolioWebsite/ATK380style_UIUX.css" rel="stylesheet" type="text/css">
 
-<title>ATK 380 Section _: UIUX</title>
+<title>ART 109- 3-D Fundamentals</title>
      
       
 </head><body><div id="wrapper">
