--- a/P1_ART109.html
+++ b/P1_ART109.html
@@ -7,7 +7,7 @@
 
 <h1>Life-sized Tape Dispenser</h1>
 
-<img style="margin: 0 auto" src="images/tapedispenser.jpg" alt="Work Name" />
+<img style="width: 100%; text-align:center" src="images/tapedispenser.jpg" alt="Work Name" />
 
 <p style="width: 100%; text-align:center">Used a big piece of box board to draw and make measurements to make each piece. Required a lot of critical thinking so the bigger scale of the hand crafted tape dispenser is equal to the actual tape dispenser. After making each piece, I used sand paper to sand down the edges to make them curvy. painted each piece with the closest color to the actual tape dispenser. and finally used gorilla glue to glue the pieces together.  </p>
 
