--- a/P2_ATK380_DP.html
+++ b/P2_ATK380_DP.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML><html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><link href="../IntermediatePortfolioWebsite/ATK380style_DP.css" rel="stylesheet" type="text/css">
+<!DOCTYPE HTML><html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><link href="ATK380style_DP.css" rel="stylesheet" type="text/css">
 
 <title>ATK 380 Section 3: Digital Painting</title>
      
