--- a/P3_ATK380_UIUX.html
+++ b/P3_ATK380_UIUX.html
@@ -9,7 +9,7 @@
 
 <li><a href="https://app.xtensio.com/folio/m6h1kgdr">See full presentation here.</a></li>
 
-<img style="margin: 40px 200px 25px -235px" src="images/Folio.png" alt="Work Name" />
+<img style="margin: 40px 200px 25px auto" src="images/Folio.png" alt="Work Name" />
 
 <p style="margin: 40px 200px 25px 200px">I started with making a persona. Then I have to come up with a device and app with UI/UX that would help out the person described in the persona. Made on Xtensio.</p>
 
