--- a/P3_ART227.html
+++ b/P3_ART227.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML><html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><link href="../IntermediatePortfolioWebsite/ART227style.css" rel="stylesheet" type="text/css">
+<!DOCTYPE HTML><html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><link href="ART227style.css" rel="stylesheet" type="text/css">
 
 <title>ART 227: Graphic Design II</title>
      
