--- a/P1_ART109.html
+++ b/P1_ART109.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML><html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><link href="../IntermediatePortfolioWebsite/ATK380style_UIUX.css" rel="stylesheet" type="text/css">
+<!DOCTYPE HTML><html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><link href="ART109style.css" rel="stylesheet" type="text/css">
 
      <title>ART 109- 3-D Fundamentals</title>
      
