--- a/P1_ART284.html
+++ b/P1_ART284.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML><html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><link href="../IntermediatePortfolioWebsite/ATK284style.css" rel="stylesheet" type="text/css">
+<!DOCTYPE HTML><html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><link href="ATK284style.css" rel="stylesheet" type="text/css">
 
 <title>ART 284: Expanded Media I</title>
      
