--- a/P1_ATK201.html
+++ b/P1_ATK201.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML><html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><link href="../IntermediatePortfolioWebsite/ATK201style.css" rel="stylesheet" type="text/css">
+<!DOCTYPE HTML><html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><link href="ATK201style.css" rel="stylesheet" type="text/css">
 
 <title>ATK 201: Basic Skills in the Digital Arts</title>
      
