--- a/P3_ATK380_UIUX.html
+++ b/P3_ATK380_UIUX.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML><html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><link href="../IntermediatePortfolioWebsite/ATK380style_UIUX.css" rel="stylesheet" type="text/css">
+<!DOCTYPE HTML><html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><link href="ATK380style_UIUX.css" rel="stylesheet" type="text/css">
 
 <title>ATK 380 Section _: UIUX</title>
      
