--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
   <li><a href="./portfolio.html">Year 1</a></li>
   <li><a href="./portfolio2.html">Year 2</a></li>
   <li><a href="./portfolio3.html">Year 3</a></li>
-  <li><a href="./portfolio3.html">Year 4</a></li>
+  <li><a href="./Portfolio4.html">Year 4</a></li>
 </ul>
 
 <a href="P1_ATK201.html"><div class="thumbnail">
