--- a/portfolio2.html
+++ b/portfolio2.html
@@ -16,6 +16,7 @@
   <li><a href="portfolio.html">Year 1</a></li>
   <li><a href="portfolio2.html">Year 2</a></li>
   <li><a href="portfolio3.html">Year 3</a></li>
+  <li><a href="Portfolio4.html">Year 4</a></li>
 </ul>
 
 <a href="work01.html"><div class="thumbnail">
