--- a/P4_ART323.html
+++ b/P4_ART323.html
@@ -9,7 +9,7 @@
 	
 	<h1>Animated Poster Jazz</h1>
 	
-	<img class="resize" style="margin: 40px 50px 25px 200px" src="images/KellyZhang_AnimatedPosterJazz.mp4" alt="Work Name" />
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/Aq5WSKEAHfg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <p style="margin: 40px 200px 25px 200px">Festival International de Jazz
 Montreux, Switzerland
