--- a/P4_ART326.html
+++ b/P4_ART326.html
@@ -7,21 +7,16 @@
 
 <body><div id="wrapper">
 	
-	<h1>Design Using Given/Found Data</h1>
-	
-	<embed src="gd3_p3_booklet_v2" width="1000px" height="2100px" alt="Work Name" />
-
-<p style="margin: 40px 200px 25px 200px">1. Identify an area of personal interest.2. Conduct research to accumulate data related to your area of interest.3. Organize found data into distinct categories/groups  and then try to identify relationships, patterns as well as possible layering and separation options. 4. Sketch by hand to visualize ideas for composition and size relationships.3. After following the above steps, only then move to the screen and start designing using the software of your preference.4. Utilize typography, color and form to create compelling graphics and visuals in order to communicate your given/found data in a way that engages the viewer in the most efficient way.5. Test print/preview/prototype to get a sense of the size and composition. Always try to incorporate test printing, previewing  and prototyping into your process.6. Iterate: design, test print/preview/prototype, review, revise. Repeat.</p>
 	
 	<h1>Design Using Given/Found Data</h1>
 	
-	<embed src="gd3_p3_booklet_v2" width="1000px" height="2100px" alt="Work Name" />
+	<embed src="gd3_p3_booklet_v2.pdf" width="1000px" height="2100px" alt="Work Name" />
 
 <p style="margin: 40px 200px 25px 200px">1. Identify an area of personal interest.2. Conduct research to accumulate data related to your area of interest.3. Organize found data into distinct categories/groups  and then try to identify relationships, patterns as well as possible layering and separation options. 4. Sketch by hand to visualize ideas for composition and size relationships.3. After following the above steps, only then move to the screen and start designing using the software of your preference.4. Utilize typography, color and form to create compelling graphics and visuals in order to communicate your given/found data in a way that engages the viewer in the most efficient way.5. Test print/preview/prototype to get a sense of the size and composition. Always try to incorporate test printing, previewing  and prototyping into your process.6. Iterate: design, test print/preview/prototype, review, revise. Repeat.</p>
 	
 	<h1>Exercise: Wordless Diagrams</h1>
 	
-	<embed src="gd3_p3_booklet_v2" width="1000px" height="2100px" alt="Work Name" />
+	<embed src="WordlessDiagram_Exercise1PDF.pdf" width="1000px" height="2100px" alt="Work Name" />
 
 <p style="margin: 40px 200px 25px 200px">Create a set of graphic instructions or wordless diagrams for a simple everyday task such as How to Make a PBJ Sandwich, How to Iron an Oxford Shirt, How to Mow a Lawn, etc. Consider the kinds of details and nuance that can communicate in about four to eight steps. Part of your creative process should include writing out the instructions in words; even though they won’t be utilized in the final form. Let the words be a tool to organize the steps for instruction, then visualize each step.</p>
 	
