--- a/P4_ART326.html
+++ b/P4_ART326.html
@@ -34,6 +34,6 @@
 
 <p style="margin: 40px 200px 25px 200px">Explore the possibilities of visualizing overlapping relationships within categories of information by representing these overlapping categories visually, using typography, scale, color, line, and other cues to indicate connections and difference. Process:Compose a list of 25 music artists or groups and include the following three categories of data for each artist or group:~ Genre of music~ City, State, Country of origin~ How much you like them (ranking list)Organize and categorize this information and find the relationships between the artists/groups. Find the overlapping information and relationships. You will visualize these relationships and create informative and dynamic compositions.Part 1Focus on typography to establish and visualize these relationships. You may use color and simple geometric shapes, but they should be secondary to the typography. Explore scale, typefaces, alignment, layout, etc.Part 2Focus on geometric shapes to establish and visualize these relationships. Color, type can be used but should be secondary to the geometric shapes.Part 3Focus on color to establish and visualize these relationships. Geometric shapes, type can be used but should be secondary to the color</p>
 	
-	<p style="width:100%;text-align:center"><a href="../Portfolio4.html">Back To Portfolio</a></p></div>
+	<p style="width:100%;text-align:center"><a href="Portfolio4.html">Back To Portfolio</a></p></div>
 </body>
 </html>
