--- a/P4_ART326.html
+++ b/P4_ART326.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><link href="ART227style.css" rel="stylesheet" type="text/css">
-<title>P4_ART326</title>
+<title>ART 326: Graphic Design III</title>
 </head>
 
 <body><div id="wrapper">
