--- a/P4_ART323.html
+++ b/P4_ART323.html
@@ -74,6 +74,6 @@ Sakiko Idei, Marimba</p>
 	
 	
 	
-	<p style="width:100%;text-align:center"><a href="../Portfolio4.html">Back To Portfolio</a></p></div>
+	<p style="width:100%;text-align:center"><a href="Portfolio4.html">Back To Portfolio</a></p></div>
 </body>
 </html>
