--- a/P4_ATK260.html
+++ b/P4_ATK260.html
@@ -10,7 +10,7 @@
 	<p style="width:100%;text-align:center"><a href="https://illinoisstateuniversity-my.sharepoint.com/:v:/g/personal/jcdrisk_ilstu_edu/EcL-S0cq5UtLs0wnAEjgmW4Bq0LOWa-F8eEoQvznp1m0VA?e=URnfhP">Live Video (Process)</a></p>
 	
 
-<embed src="atklivepics.pdf" width="1000px" height="2100px" alt="Work Name" />
+<p style="width:100%;text-align:center"><a href="https://documentcloud.adobe.com/link/track?uri=urn%3Aaaid%3Ascds%3AUS%3A619a764a-61f8-479a-9169-d6fbb93605ef">ATK Live Pictures</a></p>
 	
 
 <p style="margin: 40px 200px 25px 200px">ATK Live Music Fest - Students will work in groups of four and present a project of their choosing at the ATK Live event on March 2nd from 5:00 pm - 9:00 pm. For full-credit students must come up with an original project, set up their projects, and attended the event. </p>
@@ -22,7 +22,7 @@
 	<p style="width:100%;text-align:center"><a href="https://docs.google.com/presentation/d/1xKXZWaHsllLhj0bs6DUblKuxdjMylEh4Qanio6oCkUc/edit?usp=sharing">Presentation</a></p>
 	
 
-<embed src="20pitch.pdf" width="1000px" height="2100px" alt="Work Name" />
+<p style="width:100%;text-align:center"><a href="https://documentcloud.adobe.com/link/track?uri=urn%3Aaaid%3Ascds%3AUS%3A6abfbc7b-87be-4aa8-8c93-40e6dbbc94ce">20 Pitch Brainstorming</a></p>
 
 <p style="margin: 40px 200px 25px 200px">On the 4th Tuesday of the course, you will be required to give a formal presentation to the class that is 7-10 minutes in length. You will be required to create a visual aid for your presentation, and every person in your group must speak. The project must also have a brand, meaning you have a name, logo, and slogan for your project.</p>
 
