--- a/P4_ART371.html
+++ b/P4_ART371.html
@@ -14,26 +14,19 @@
 	<img src="images/cup5.png" />
 	<img src="images/cup6.png" />
 	<img src="images/cup7.png" />
-	<img src="images/gengar.png" />
-	<img src="images/gengar_back.png" />
-	<img src="images/gengar_front.png" />
-	<img src="images/gengar_left.png" />
-	<img src="images/gengarfinal.png" />
+	
 
 <p style="margin: 40px 200px 25px 200px">Using blender to create a cup holder design that allows user to interact in an interesting way. Not finished; only design process (not printed in a 3-D printer). </p>
 	
 <h1>Low Polygon 3-D Model</h1>
 	
-	<p style="width:100%;text-align:center"><a href="https://docs.google.com/document/d/1ZLDESsLLe75R2TY_v3_SMuwqZB5IFUxQmunEC6Fit-A/edit?usp=sharing">Planning Google Doc</a></p>
-	
-	<p style="width:100%;text-align:center"><a href="https://docs.google.com/presentation/d/1xKXZWaHsllLhj0bs6DUblKuxdjMylEh4Qanio6oCkUc/edit?usp=sharing">Presentation</a></p>
-	
+<img src="images/gengar.png" />
+	<img src="images/gengar_back.png" />
+	<img src="images/gengar_front.png" />
+	<img src="images/gengar_left.png" />
+	<img src="images/gengarfinal.png" />
 
-<embed src="20pitch.pdf" width="1000px" height="2100px" alt="Work Name" />
-	
-	<p style="width:100%;text-align:center"><a href="https://documentcloud.adobe.com/link/track?uri=urn%3Aaaid%3Ascds%3AUS%3A6abfbc7b-87be-4aa8-8c93-40e6dbbc94ce">20 Pitch Brainstorming</a></p>
-
-<p style="margin: 40px 200px 25px 200px">On the 4th Tuesday of the course, you will be required to give a formal presentation to the class that is 7-10 minutes in length. You will be required to create a visual aid for your presentation, and every person in your group must speak. The project must also have a brand, meaning you have a name, logo, and slogan for your project.</p>
+<p style="margin: 40px 200px 25px 200px">I did my low-polygon character on Gengar, one of my favorite Pokemons. Created in blender!</p>
 
 
 
