--- a/P4_ART336.html
+++ b/P4_ART336.html
@@ -11,14 +11,14 @@
 	<embed src="MundaneObject_Logos.pdf" width="1000px" height="2100px" alt="Work Name" />
 	<embed src="MundaneObject_MoldTemplate.pdf" width="1000px" height="2100px" alt="Work Name" />
 	
-	<img src="images/1.png" />
-	<img src="images/2.png" />
-	<img src="images/3.png" />
-	<img src="images/4.png" />
-	<img src="images/5.png" />
-	<img src="images/6.png" />
-	<img src="images/7.png" />
-	<img src="images/8.png" />
+	<img src="images/1.jpeg" />
+	<img src="images/2.jpeg" />
+	<img src="images/3.jpeg" />
+	<img src="images/4.jpeg" />
+	<img src="images/5.jpeg" />
+	<img src="images/6.jpeg" />
+	<img src="images/7.jpeg" />
+	<img src="images/8.jpeg" />
 	
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/Qb0JRb1sCjc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	
