--- a/Portfolio4.html
+++ b/Portfolio4.html
@@ -61,13 +61,13 @@
       
       
 	
-	<a href="P3_ATK380_MG.html"><div class="thumbnail">
+	<a href="P4_ATAC.html"><div class="thumbnail">
       <img src="images/fullmoonthumbnail.jpg" alt="Work Name" />
       <p>Club</p>
       <p>Arts Technology Animation Connection</p></div></a>
 	
 	
-	<a href="P3_ATK380_MG.html"><div class="thumbnail">
+	<a href="P4_Migraine.html"><div class="thumbnail">
       <img src="images/fullmoonthumbnail.jpg" alt="Work Name" />
       <p>Side Projects</p>
       <p>Migraine</p></div></a>
