--- a/P4_Migraine.html
+++ b/P4_Migraine.html
@@ -7,7 +7,7 @@
 
 <h1>Migraine</h1>
 	
-<img src="images/1-1.jpeg" />
+<img src="images/1-1.jpeg" width="75%" height="75%" />
 	<img src="images/1-2.jpeg" width="75%" height="75%" />
 	<img src="images/1-3.jpeg" width="75%" height="75%" />
 	<img src="images/1-4.jpeg" width="75%" height="75%"/>
